--- a/index.html
+++ b/index.html
@@ -30,9 +30,15 @@
                 <a href="#" class="link">Sign In</a>
                 <a href="#" class="link">Get Started</a>
             </div>
-
         </nav>
-
+        <div class="hero-section">
+            <div class="text">
+                <h4>Learn from the best of industry</h4>
+                <h1>Highest in quality, affordable <br> in price</h1>
+                <p>Digital entrepreneurs, Youtubers and content creators provide <br> affordable courses across technologies.</p>
+            </div>
+            <img src="./assets/herosection.jpg" alt="">
+        </div>
 
     </div>
 </body>
