background layer added to hero section

--- a/index.html
+++ b/index.html
@@ -32,12 +32,14 @@
             </div>
         </nav>
         <div class="hero-section">
-            <div class="text">
-                <h4>Learn from the best of industry</h4>
-                <h1>Highest in quality, affordable <br> in price</h1>
-                <p>Digital entrepreneurs, Youtubers and content creators provide <br> affordable courses across technologies.</p>
+            <div class="wrapper">
+                <div class="text">
+                    <h4>Learn from the best of industry</h4>
+                    <h1>Highest in quality, affordable <br> in price</h1>
+                    <p>Digital entrepreneurs, Youtubers and content creators provide <br> affordable courses across technologies.</p>
+                </div>
+                <img src="./assets/herosection.jpg" alt="">
             </div>
-            <img src="./assets/herosection.jpg" alt="">
         </div>
 
     </div>
