sublink added to navbar

--- a/index.html
+++ b/index.html
@@ -16,9 +16,36 @@
                 <img src="./assets/search-icon.svg" alt="" class="search-icon">
             </div>
             <div class="drop-down">
-                <div class="courses">Courses <img src="./assets/dropdown.svg" alt=""></div>
-                <div class="courses">Company <img src="./assets/dropdown.svg" alt=""></div>
-                <div class="courses">Programs <img src="./assets/dropdown.svg" alt=""></div>
+                <div class="courses">Courses <img src="./assets/dropdown.svg" alt="">
+                    <div class="sub-links course-sublink hidden">
+                        <a href="#" class="link">Data Science</a>
+                        <a href="#" class="link">Big Data</a>
+                        <a href="#" class="link">Web Devlopment</a>
+                        <a href="#" class="link">Blockchain</a>
+                        <a href="#" class="link">Programming</a>
+                        <a href="#" class="link">Cloud</a>
+                    </div>
+                </div>
+                <div class="company">Company <img src="./assets/dropdown.svg" alt="">
+                    <div class="sub-links company-sublink hidden">
+                        <a href="#" class="link">About Us</a>
+                        <a href="#" class="link">Contact Us</a>
+                        <a href="#" class="link">FAQs</a>
+                        <a href="#" class="link">Hack-A-Thon</a>
+                        <a href="#" class="link">Privacy Policy</a>
+                        <a href="#" class="link">Terms and Conditions</a>
+                    </div>
+                </div>
+                <div class="programs">Programs <img src="./assets/dropdown.svg" alt="">
+                    <div class="sub-links programs-sublink hidden">
+                        <a href="#" class="link">One Neuron</a>
+                        <a href="#" class="link">Job Portal</a>
+                        <a href="#" class="link">Internship Portal</a>
+                        <a href="#" class="link">Become an affiliate</a>
+                        <a href="#" class="link">Hall of fame</a>
+                        <a href="#" class="link">Blog</a>
+                    </div>
+                </div>
             </div>
             <div class="links">
                 <!-- <a href="#" class="link">One Neuron</a>
