Achivement Section completed

--- a/index.html
+++ b/index.html
@@ -48,12 +48,6 @@
                 </div>
             </div>
             <div class="links">
-                <!-- <a href="#" class="link">One Neuron</a>
-                <a href="#" class="link">Job Portal</a>
-                <a href="#" class="link">Internship Portal</a>
-                <a href="#" class="link">Become an affiliate</a>
-                <a href="#" class="link">Hall of fame</a>
-                <a href="#" class="link">Blog</a> -->
                 <a href="#" class="link">Sign In</a>
                 <a href="#" class="link">Get Started</a>
             </div>
@@ -68,7 +62,26 @@
                 <img src="./assets/herosection.jpg" alt="">
             </div>
         </div>
-
+        <div class="achivement">
+            <h1>"Pure Hardwork, No Shortcuts"</h1>
+            <div class="cards">
+                <div class="card">
+                    <img src="./assets/undraw_road_to_knowledge_m8s0.svg" alt="">
+                    <h3>400+</h3>
+                    <h4>Different Courses</h4>
+                </div>
+                <div class="card">
+                    <img src="./assets/undraw_education_f8ru.svg" alt="">
+                    <h3>400000+</h3>
+                    <h4>Student Enrolled</h4>
+                </div>
+                <div class="card">
+                    <img src="./assets/undraw_around_the_world_re_rb1p.svg" alt="">
+                    <h3>10000+</h3>
+                    <h4>Successful Transition</h4>
+                </div>
+            </div>
+        </div>
     </div>
     <script src="./script.js"></script>
 </body>
