avengers section completed

--- a/index.html
+++ b/index.html
@@ -145,6 +145,115 @@
           <div class="swiper-pagination"></div>
         </div>
       </div>
+      <div class="learn-section">
+        <h1>What you will learn</h1>
+        <div class="learn-bottom">
+            <div class="tabs">
+                <div class="tab">
+                    <div class="text">
+                        <h3>LIVE PROGRAMS</h3>
+                        <h2>Get your program with live <br> "instructor led" learning.
+                        </h2>
+                    </div>
+                    <img src="./assets/arrow.svg" alt="">
+                </div>
+                <div class="tab">
+                    <div class="text">
+                        <h3>COMMUNITY PROGRAMS</h3>
+                        <h2>Open to all pro-live classes on <br> Youtube for free.
+                        </h2>
+                    </div>
+                    <img src="./assets/arrow.svg" alt="">
+                </div>
+                <div class="tab">
+                    <div class="text">
+                        <h3>AFFORDABLE PROGRAMS</h3>
+                        <h2>Find your favourite courses in <br> pocket-friendly ways.
+                        </h2>
+                    </div>
+                    <img src="./assets/arrow.svg" alt="">
+                </div>
+                <!-- <div class="tab">
+                    <div class="text">
+                        <h3>ONE NEURON</h3>
+                        <h2>New Neurons all day, every day.
+                        </h2>
+                    </div>
+                    <img src="./assets/arrow.svg" alt="">
+                </div> -->
+                <div class="tab">
+                    <div class="text">
+                        <h3>TEST SERIES</h3>
+                        <h2>Quiz-based courses to prepare <br> you for interviews.
+                        </h2>
+                    </div>
+                    <img src="./assets/arrow.svg" alt="">
+                </div>
+            </div>
+            <img src="./assets/hero-hackathon.png" alt="">
+        </div>
+      </div>
+      <div class="avengers-section">
+        <h1>Tech Avengers</h1>
+        <div class="avengers">
+        <div class="aven-card">
+            <img src="./assets/mentors/hitesh-square.png" alt="">
+            <div class="bottom">
+                <h5>HITESH CHOUDHARY</h5>
+                <p>CTO</p>
+                <img src="./assets/linkedin-icon.svg" alt="">
+                <img src="./assets/you-tube-icon.svg" alt="">
+            </div>
+        </div>
+        <div class="aven-card">
+            <img src="./assets/mentors/gaurav-sen-square.png" alt="">
+            <div class="bottom">
+                <h5>GAURAV SEN</h5>
+                <p>Senior VP</p>
+                <img src="./assets/linkedin-icon.svg" alt="">
+                <img src="./assets/you-tube-icon.svg" alt="">
+            </div>
+        </div>
+        <div class="aven-card">
+            <img src="./assets/mentors/sudhanshu-square.png" alt="">
+            <div class="bottom">
+                <h5>SUDHANSHU KUMAR</h5>
+                <p>AI Engineer & CEO</p>
+                <img src="./assets/linkedin-icon.svg" alt="">
+                <img src="./assets/you-tube-icon.svg" alt="">
+            </div>
+        </div>
+        <div class="aven-card">
+            <img src="./assets/mentors/Kiran-Sahu-square.png" alt="">
+            <div class="bottom">
+                <h5>KIRAN SAHU</h5>
+                <p>Mentor</p>
+                <img src="./assets/linkedin-icon.svg" alt="">
+                <img src="./assets/you-tube-icon.svg" alt="">
+            </div>
+        </div>
+        <div class="aven-card">
+            <img src="./assets/mentors/Mukesh-Otwani-square.png" alt="">
+            <div class="bottom">
+                <h5>MUKESH OTWANI</h5>
+                <p>VP Automation</p>
+                <img src="./assets/linkedin-icon.svg" alt="">
+                <img src="./assets/you-tube-icon.svg" alt="">
+            </div>
+        </div>
+        <div class="aven-card">
+            <img src="./assets/mentors/telusko-square.png" alt="">
+            <div class="bottom">
+                <h5>NAVIN REDDY</h5>
+                <p>Senior VP</p>
+                <img src="./assets/linkedin-icon.svg" alt="">
+                <img src="./assets/you-tube-icon.svg" alt="">
+            </div>
+        </div>
+      </div>
+      <a href="#" class="link">See More</a>
+      </div>
+      
     </div>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="./script.js"></script>
