partner section completed

--- a/index.html
+++ b/index.html
@@ -253,7 +253,16 @@
       </div>
       <a href="#" class="link">See More</a>
       </div>
-      
+      <div class="partners">
+        <h1>Our Partnered <br> Institutions</h1>
+        <div class="images">
+            <img src="./assets/taxila.svg" alt="">
+            <img src="./assets/vit.svg" alt="">
+            <img src="./assets/keit.svg" alt="">
+            <img src="./assets/gim.svg" alt="">
+            <img src="./assets/malnad-college.svg" alt="">
+        </div>
+      </div>
     </div>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="./script.js"></script>
