Footer section completed

--- a/index.html
+++ b/index.html
@@ -263,6 +263,30 @@
             <img src="./assets/malnad-college.svg" alt="">
         </div>
       </div>
+      <footer>
+        <div class="left">
+            <div class="foot-images">
+                <img src="./assets/footer/ineuron-logo-white.png" alt="">
+                <div class="social">
+                    <img src="./assets/footer/facebook.svg" alt="">
+                    <img src="./assets/footer/twitter.svg" alt="">
+                    <img src="./assets/footer/linkedin.svg" alt="">
+                    <img src="./assets/footer/youtube.svg" alt="">
+                </div>
+            </div>
+            <div class="contact">
+                <div class="add foot-flex">
+                    <img src="./assets/footer/location.svg" alt="">
+                    <span>17th Floor Tower A, Brigade Signature Towers, Sannatammanahalli, Bengaluru, Karnataka 562129.</span>
+                </div>
+                <div class="email foot-flex">
+                    <img src="./assets/footer/email.svg" alt="">
+                    <span><span class="bold">Email us:</span> contact @ineuron.ai</span>
+                </div>
+            </div>
+        </div>
+        <img src="./assets/footer/iso-9001-2015.svg" alt="">
+      </footer>
     </div>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="./script.js"></script>
