--- a/index.html
+++ b/index.html
@@ -64,6 +64,14 @@
           <a href="#" class="link">Get Started</a>
         </div>
       </nav>
+      <nav class="mob-navbar navbar">
+        <img src="./assets/ineuron-logo.png" alt="" class="logo" />
+        <div class="links">
+          <a href="#" class="link">Sign In</a>
+          <a href="#" class="link">Get Started</a>
+          <img src="./assets/menu-3-fill.svg" alt="">
+        </div>
+      </nav>
       <div class="hero-section">
         <div class="wrapper">
           <div class="text">
