--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>iNeuron</title>
     <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./responsive.css">
     <!-- Swiper's CSS -->
     <link
       rel="stylesheet"
@@ -14,7 +15,7 @@
   </head>
   <body>
     <div class="main-container">
-      <nav class="navbar">
+      <nav class="navbar desktop-nav">
         <img src="./assets/ineuron-logo.png" alt="" class="logo" />
         <div class="search">
           <input
@@ -64,7 +65,7 @@
           <a href="#" class="link">Get Started</a>
         </div>
       </nav>
-      <nav class="mob-navbar navbar">
+      <nav class="mob-navbar navbar hidden">
         <img src="./assets/ineuron-logo.png" alt="" class="logo" />
         <div class="links">
           <a href="#" class="link">Sign In</a>
