mob-sub-list added on small display

--- a/index.html
+++ b/index.html
@@ -70,7 +70,12 @@
         <div class="links">
           <a href="#" class="link">Sign In</a>
           <a href="#" class="link">Get Started</a>
-          <img src="./assets/menu-3-fill.svg" alt="">
+          <img src="./assets/menu-3-fill.svg" alt="" class="ham">
+          <div class="mob-sub-links hidden">
+            <a href="#" class="link"><span><</span> Courses</a>
+            <a href="#" class="link"><span><</span> Company</a>
+            <a href="#" class="link"><span><</span> Progams</a>
+          </div>
         </div>
       </nav>
       <div class="hero-section">
