--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
         <div class="links">
           <a href="#" class="link">Sign In</a>
           <a href="#" class="link">Get Started</a>
+          <img src="./assets/account_circle_black_24dp.svg" alt="" class="user">
           <img src="./assets/menu-3-fill.svg" alt="" class="ham">
           <div class="mob-sub-links hidden">
             <a href="#" class="link"><span><</span> Courses</a>
